<resources>
    <string name="app_name">DopeStrobe</string>
    <string name="color_text">select a color</string>
    <string name="start_text">start</string>
    <string name="led_text">led</string>
    <string name="screen_text">screen</string>
    <string name="dope_text">DOPE</string>
    <string name="strobe_text">STROBE</string>
    <string name="freq_text">...</string>
    <string name="plus">+</string>
    <string name="back">&lt;-</string>
    <string name="brightness">Brightness</string>
    <string name="frequency">Frequency</string>
    <string name="squares">&#9632; &#9632; &#9632;</string>
    <string name="back_screen">&lt;back</string>
    
    <string name="ms">%d ms </string>
    <string name="percents">%d %%</string>


    <string name="title_activity_screen">ScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
